# telegramtest

./: .dockerignore  .env.example  README.md  admin.dockerfile  docker-compose-prod.yaml  docker-compose.yaml
.github/workflows/: ci.yml
app/: alembic.ini  pyproject.toml
app/app/: main.py  reloader.py
app/app/admin/: app.py  pyproject.toml
app/app/admin/templates/: index.css  index.html  my_master.html
app/app/admin/views/: mixins.py  tg_user.py
app/app/core/: config.py  container.py
app/app/db/: session.py
app/app/handlers/: start.py
app/app/middlewares/: session_middleware.py  throttling.py
app/app/models/: __init__.py  admin_user.py  mixins.py  telegram_user.py
app/app/repositories/: admin_user.py  base.py
app/app/scripts/: create_super_user.py  generate_superuser_service.py
app/app/services/: telegram_user_service.py
app/migrations/: env.py
app/migrations/versions/: 71620cb741b8_inital.py
app/scripts/: create_super_user.py
nginx/local/: nginx.conf
nginx/local/servers/: site.conf
nginx/prod/: nginx.conf
nginx/prod/servers/: site.conf
