[tool.poetry]
name = "bot-admin"
version = "0.1.0"
description = ""
authors = ["timofejkazakov <t.kazakov@agora.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.24"
python-jose = "^3.3.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
flask = "^3.0.0"
flask-admin = "^1.6.1"
flask-security = "^3.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
